version/0.5/_sources/examples/preprocessor/doc_preprocess_fullheart_rodero_01.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/preprocessor/doc_preprocess_fullheart_rodero_01.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_preprocessor_doc_preprocess_fullheart_rodero_01.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_preprocessor_doc_preprocess_fullheart_rodero_01.py:


Create a full heart model
---------------------------------
This example shows you how to process a case from Rodero et al (2021) into
a simulation-ready heart model.

.. GENERATED FROM PYTHON SOURCE LINES 32-38

Example setup
-------------
Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory and generated model

.. GENERATED FROM PYTHON SOURCE LINES 38-67

.. code-block:: default



    import json
    import os
    from pathlib import Path

    import ansys.heart.core.models as models
    from ansys.heart.preprocessor.database_preprocessor import get_compatible_input

    # Use Fluent 24.1 for meshing.
    import ansys.heart.preprocessor.mesher as mesher

    mesher._fluent_version = "24.1"

    # specify necessary paths.
    case_file = os.path.join(
        "d:\\development", "pyansys-heart", "downloads", "Rodero2021", "01", "01.vtk"
    )


    workdir = os.path.join(os.path.dirname(case_file), "FullHeart")

    if not os.path.isdir(workdir):
        os.makedirs(workdir)

    path_to_model = os.path.join(workdir, "heart_model.pickle")
    path_to_input = os.path.join(workdir, "input_model.vtp")
    path_to_part_definitions = os.path.join(workdir, "part_definitions.json")


.. GENERATED FROM PYTHON SOURCE LINES 78-87

.. note::
   You may need to (manually) download the .case or .vtk files from the Strocchi2020
   and Rodero2021 databases first. See:

   - https://zenodo.org/records/3890034
   - https://zenodo.org/records/4590294

   Alternatively you can make use of the download
   module instead. See the download module.

.. GENERATED FROM PYTHON SOURCE LINES 89-91

Convert the .vtk file into compatible input
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 91-101

.. code-block:: default

    input_geom, part_definitions = get_compatible_input(
        case_file, model_type="FullHeart", database="Rodero2021"
    )

    # Note that the input model and part definitions can be used for later use.
    # save input geometry and part definitions:
    input_geom.save(path_to_input)
    with open(path_to_part_definitions, "w") as f:
        json.dump(part_definitions, f, indent=True)


.. GENERATED FROM PYTHON SOURCE LINES 102-106

Set required information
~~~~~~~~~~~~~~~~~~~~~~~~
Set the right database to which this case belongs, and set other relevant
information such as the desired mesh size.

.. GENERATED FROM PYTHON SOURCE LINES 106-119

.. code-block:: default

    info = models.ModelInfo(
        input=input_geom,
        scalar="surface-id",
        part_definitions=part_definitions,
        work_directory=workdir,
        mesh_size=1.5,
    )
    info.path_to_model = path_to_model

    # create or clean working directory
    info.create_workdir()
    info.clean_workdir([".stl", ".msh.h5", ".pickle"])


.. GENERATED FROM PYTHON SOURCE LINES 120-123

Initialize the heart model with info
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Initialize the desired heart model with info.

.. GENERATED FROM PYTHON SOURCE LINES 123-155

.. code-block:: default


    # initialize full heart model
    model = models.FullHeart(info)

    # load input model generated in an earlier step.
    model.load_input()

    # mesh the volume of all structural parts.
    model.mesh_volume(use_wrapper=True)

    # update the model and extract the required (anatomical) features
    model._update_parts()

    # dump the model to disk
    model.dump_model(path_to_model)

    # Optionally save the simulation mesh as a vtk object for "offline" inspection
    model.mesh.save(os.path.join(model.info.workdir, "simulation-mesh.vtu"))
    model.save_model(os.path.join(model.info.workdir, "heart_model.vtu"))

    # print some info about the processed model.
    model.print_info()

    # clean the working directory
    info.clean_workdir(extensions_to_remove=[".stl", ".vtk", ".msh.h5"])

    # dump information to stdout
    info.dump_info()

    # print part names
    print(model.part_names)


.. GENERATED FROM PYTHON SOURCE LINES 156-160

Visualize results
~~~~~~~~~~~~~~~~~
You can visualize and inspect the components of the model by accessing
various properties/attributes and invoke methods.

.. GENERATED FROM PYTHON SOURCE LINES 160-166

.. code-block:: default

    print(f"Volume of LV cavity: {model.left_ventricle.cavity.volume} mm^3")
    print(f"Volume of LV cavity: {model.left_atrium.cavity.volume} mm^3")

    # plot the remeshed model
    model.plot_mesh(show_edges=False)


.. GENERATED FROM PYTHON SOURCE LINES 167-170

.. image:: /_static/images/full_heart_mesh.png
  :width: 400pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 170-174

.. code-block:: default


    # plot the endocardial surface of the left ventricle.
    model.left_ventricle.endocardium.plot(show_edges=True, color="r")


.. GENERATED FROM PYTHON SOURCE LINES 175-178

.. image:: /_static/images/full_heart_lv_endocardium.png
  :width: 400pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 178-187

.. code-block:: default


    # loop over all cavities and plot these in a single window with pyvista.
    import pyvista as pv

    cavities = pv.PolyData()
    for c in model.cavities:
        cavities += c.surface
    cavities.plot(show_edges=True)


.. GENERATED FROM PYTHON SOURCE LINES 188-191

.. image:: /_static/images/full_heart_cavities.png
  :width: 400pt
  :align: center


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.000 seconds)


.. _sphx_glr_download_examples_preprocessor_doc_preprocess_fullheart_rodero_01.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: doc_preprocess_fullheart_rodero_01.py <doc_preprocess_fullheart_rodero_01.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: doc_preprocess_fullheart_rodero_01.ipynb <doc_preprocess_fullheart_rodero_01.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
